fixed the lists spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ footer .attribution a {
 .recipe section .section-list {
   display: flex;
   flex-direction: column;
-  gap: var(--sp-sm);
+  gap: var(--sp-xsm);
 }
 .recipe .introduction {
   --_section-color: var(--clr-stone-900);
